<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a733_csi_cam_ros2</name>
  <version>1.0.0</version>
  <description>
    ROS 2 Humble camera node for IMX219 on Orange Pi Zero 3W (Allwinner A733).
    Captures frames directly via V4L2 with Allwinner ISP 3A support,
    publishes sensor_msgs/Image and sensor_msgs/CameraInfo.
  </description>
  <maintainer email="petayyyy@users.noreply.github.com">petayyyy</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/petayyyy/a733_csi_cam_ros2</url>
  <url type="bugtracker">https://github.com/petayyyy/a733_csi_cam_ros2/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
